Fix: domain url

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
     />
     <meta
       property="og:image"
-      content="https://seudominio.com.br/icons/og-image.jpg"
+      content="https://jjdsnt.github.io/itajuba/icons/og-image.jpg"
     />
-    <meta property="og:url" content="https://seudominio.com.br/" />
+    <meta property="og:url" content="https://jjdsnt.github.io/itajuba/" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pt_BR" />
 
@@ -31,7 +31,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://seudominio.com.br/icons/og-image.jpg"
+      content="https://jjdsnt.github.io/itajuba/icons/og-image.jpg"
     />
 
     <!-- Meta padrão (fallbacks) -->
