--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
     <meta name="author" content="Clube de Malha Itajubá" />
 
     <!-- Favicon moderno -->
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <link rel="alternate icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <link rel="alternate icon" href="favicon.ico" type="image/x-icon" />
 
     <!-- Ícone Apple -->
     <link rel="apple-touch-icon" href="icons/apple-icon-180.png" />
