--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     />
     <meta
       property="og:image"
-      content="https://jjdsnt.github.io/itajuba/icons/og-image.jpg"
+      content="https://jjdsnt.github.io/itajuba/icons/og-image.png"
     />
     <meta property="og:url" content="https://jjdsnt.github.io/itajuba/" />
     <meta property="og:type" content="website" />
