--- a/src/index.html
+++ b/src/index.html
@@ -245,7 +245,50 @@
     />
   </head>
   <body>
+    <style>
+      html {
+        overflow-y: scroll; /* força a presença da scrollbar vertical */
+      }
+
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      #splash-screen {
+        position: fixed;
+        inset: 0;
+        background: #eee;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        font-family: sans-serif;
+        color: #333;
+        transition: opacity 0.3s ease;
+      }
+
+      #splash-screen.fade-out {
+        opacity: 0;
+      }
+
+      #splash-screen img {
+        width: 120px;
+        margin-bottom: 1rem;
+      }
+
+      #splash-screen p {
+        font-size: 1.1rem;
+        opacity: 0.7;
+      }
+    </style>
+
     <app-root></app-root>
+    <div id="splash-screen">
+      <img src="escudo.png" alt="Logo do CMI" />
+      <p>Carregando...</p>
+    </div>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
     >
