Tentando melhorar o splash screen

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
     <app-root></app-root>
     <div id="splash-screen">
       <img src="assets/escudo.png" alt="Logo do CMI" />
-      <p>Carregando...</p>
+      <p id="splash-text">Carregando...</p>
     </div>
     <noscript>Por favor, ative o JavaScript para continuar usando este aplicativo.</noscript>
   </body>
