--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
     <title>Clube de Malha Itajubá</title>
@@ -95,7 +95,7 @@
     <app-root></app-root>
     <div id="splash-screen">
       <img src="assets/escudo.png" alt="Logo do CMI" />
-      <p id="splash-text">Carregando...</p>
+      <output id="splash-text" aria-live="polite">Carregando...</output>
     </div>
     <noscript>Por favor, ative o JavaScript para continuar usando este aplicativo.</noscript>
   </body>
