--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,14 @@
 
     <!-- Open Graph -->
     <meta property="og:title" content="Clube de Malha Itajubá" />
-    <meta property="og:description" content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960." />
-    <meta property="og:image" content="https://jjdsnt.github.io/itajuba/assets/icons/og-image.png" />
+    <meta
+      property="og:description"
+      content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960."
+    />
+    <meta
+      property="og:image"
+      content="https://jjdsnt.github.io/itajuba/assets/icons/og-image.png"
+    />
     <meta property="og:url" content="https://jjdsnt.github.io/itajuba/" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pt_BR" />
@@ -19,16 +25,29 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Clube de Malha Itajubá" />
-    <meta name="twitter:description" content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960." />
-    <meta name="twitter:image" content="https://jjdsnt.github.io/itajuba/assets/icons/og-image.jpg" />
+    <meta
+      name="twitter:description"
+      content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960."
+    />
+    <meta
+      name="twitter:image"
+      content="https://jjdsnt.github.io/itajuba/assets/icons/og-image.jpg"
+    />
 
     <!-- Meta padrão -->
-    <meta name="description" content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960." />
+    <meta
+      name="description"
+      content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960."
+    />
     <meta name="author" content="Clube de Malha Itajubá" />
 
     <!-- Favicon -->
     <link rel="icon" href="assets/icons/favicon.svg" type="image/svg+xml" />
-    <link rel="alternate icon" href="assets/icons/favicon.ico" type="image/x-icon" />
+    <link
+      rel="alternate icon"
+      href="assets/icons/favicon.ico"
+      type="image/x-icon"
+    />
 
     <!-- Ícones Apple -->
     <link rel="apple-touch-icon" href="assets/icons/apple-icon-180.png" />
@@ -38,19 +57,58 @@
     <meta name="apple-mobile-web-app-title" content="Clube de Malha Itajubá" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
 
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-2048-2732.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-2732-2048.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-1668-2388.jpg" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-2388-1668.jpg" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-1536-2048.jpg" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-2048-1536.jpg" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-1640-2360.jpg" media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-2360-1640.jpg" media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-1668-2224.jpg" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" />
-    <link rel="apple-touch-startup-image" href="assets/icons/apple-splash-2224-1668.jpg" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
-    
-    <!-- Você pode continuar adicionando os outros formatos que precisar aqui -->
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-2048-2732.jpg"
+      media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-2732-2048.jpg"
+      media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-1668-2388.jpg"
+      media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-2388-1668.jpg"
+      media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-1536-2048.jpg"
+      media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-2048-1536.jpg"
+      media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-1640-2360.jpg"
+      media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-2360-1640.jpg"
+      media="(device-width: 820px) and (device-height: 1180px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-1668-2224.jpg"
+      media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
+    />
+    <link
+      rel="apple-touch-startup-image"
+      href="assets/icons/apple-splash-2224-1668.jpg"
+      media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
+    />
 
+    <!-- Você pode continuar adicionando os outros formatos que precisar aqui -->
   </head>
   <body>
     <style>
@@ -97,6 +155,42 @@
       <img src="assets/escudo.png" alt="Logo do CMI" />
       <output id="splash-text" aria-live="polite">Carregando...</output>
     </div>
-    <noscript>Por favor, ative o JavaScript para continuar usando este aplicativo.</noscript>
+
+    <noscript>
+      <style>
+        #splash-screen {
+          display: none;
+        }
+        #fallback-screen {
+          position: fixed;
+          inset: 0;
+          background: #eee;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          font-family: sans-serif;
+          color: #333;
+          z-index: 9999;
+        }
+        #fallback-screen img {
+          width: 120px;
+          margin-bottom: 1rem;
+        }
+        #fallback-screen p {
+          font-size: 1.1rem;
+          opacity: 0.8;
+          max-width: 300px;
+          text-align: center;
+        }
+      </style>
+      <div id="fallback-screen">
+        <img src="assets/escudo.png" alt="Logo do CMI" />
+        <p>
+          Seu navegador parece não suportar este aplicativo. Por favor, ative o
+          JavaScript ou atualize seu navegador.
+        </p>
+      </div>
+    </noscript>
   </body>
 </html>
