Add missing tag

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       property="og:description"
       content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960."
     />
+    <meta property="og:logo" content="https://jjdsnt.github.io/itajuba/icons/og-image.png" />
     <meta
       property="og:image"
       content="https://jjdsnt.github.io/itajuba/icons/og-image.png"
@@ -33,6 +34,8 @@
       name="twitter:image"
       content="https://jjdsnt.github.io/itajuba/icons/og-image.jpg"
     />
+
+    
 
     <!-- Meta padrão (fallbacks) -->
     <meta
