--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#1976d2" />
 
     <!-- Open Graph (Facebook, WhatsApp, etc) -->
+    <meta property="og:site_name" content="Clube de Malha Itajubá" />
     <meta property="og:title" content="Clube de Malha Itajubá" />
     <meta
       property="og:description"
@@ -47,6 +48,8 @@
     <!-- Favicon moderno -->
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="alternate icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="icons/favicon-192.png" sizes="192x192">
+
 
     <!-- Ícone Apple -->
     <link rel="apple-touch-icon" href="icons/apple-icon-180.png" />
