--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       property="og:description"
       content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960."
     />
-    <meta property="og:logo" content="https://jjdsnt.github.io/itajuba/icons/og-image.png" />
+    <meta property="og:image" itemprop="image" content="https://jjdsnt.github.io/itajuba/icons/og-image.jpg" />
     <meta
       property="og:image"
       content="https://jjdsnt.github.io/itajuba/icons/og-image.png"
