Pequenos ajustes nas metatags

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="manifest" href="manifest.webmanifest" />
     <meta name="theme-color" content="#1976d2" />
+    
+    <!-- Fallback SEO -->
+    <meta name="description" content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960." />
 
     <!-- Open Graph (Facebook, WhatsApp, etc) -->
     <meta property="og:site_name" content="Clube de Malha Itajubá" />
@@ -16,10 +19,10 @@
       content="Conheça o Clube de Malha Itajubá. Tradição, esporte e comunidade desde 1960."
     />
     <meta property="og:image" itemprop="image" content="https://jjdsnt.github.io/itajuba/icons/og-image.jpg" />
-    <meta
-      property="og:image"
-      content="https://jjdsnt.github.io/itajuba/icons/og-image.png"
-    />
+
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
     <meta property="og:url" content="https://jjdsnt.github.io/itajuba/" />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pt_BR" />
